fixed overflow for notifications

--- a/react/src/scss/friendRequest.scss
+++ b/react/src/scss/friendRequest.scss
@@ -25,4 +25,9 @@
     .popover-title {
         font-size: 15pt;
     }
+
+    .popover-content {
+        max-height: 60vh;
+        overflow-y: auto;
+    }
 }
